<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.maalarm.finalalarm.MainActivity"
    tools:showIn="@layout/activity_main">

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="65dp"
        android:timePickerMode="spinner" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="On"
        android:id="@+id/alarm_on"
        android:clickable="true"
        android:layout_below="@+id/update_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:ignore="HardcodedText"
        android:focusable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Off"
        android:id="@+id/alarm_off"
        android:clickable="true"
        android:layout_below="@+id/update_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:ignore="HardcodedText"
        android:focusable="true"
        />

  <!--  <Switch
        android:id="@+id/simpleSwitch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@id/timePicker"
        android:checked="false"
        android:text="State    "
        android:textOff="Off"
        android:textOn="On"
        android:textSize="15dp" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Status Bar"
        android:id="@+id/update_text"
        android:layout_below="@+id/timePicker"
        android:layout_centerHorizontal="true"
        tools:ignore="HardcodedText"
       />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/richard_spinner"
        android:layout_below="@+id/alarm_on"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>